# randtime

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  time.txt
.github/workflows/: rust.yml
src/: lib.rs  main.rs  timegen.rs
src/time_service/: mod.rs  time_gen.rs
src/time_service/time_storage/: mod.rs  time_storage_error.rs
static/: main.css  time.js
templates/: index.html.tera  index.tera
