[package]
name = "randtime"
version = "0.1.0"
authors = ["Eric Groom <egroom@mail.sfsu.edu>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.14"
chrono = "0.4"
rand = "0.7"

[dependencies.rocket_contrib]
version = "0.4.2"
features = ["tera_templates"]